--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,11 @@
   <link rel="stylesheet" type="text/css" href="index.css">
   <title>CSS Grid Code Along</title>
 </head>
+
 <body>
   <div class="grid-container">
     <div class="grid-item">1</div>
-    <div class="grid-item">2</div>
+    <div class="grid-item bigItem">2</div>
     <div class="grid-item">3</div>
     <div class="grid-item">4</div>
     <div class="grid-item">5</div>
@@ -23,4 +25,5 @@
     <div class="grid-item">12</div>
   </div>
 </body>
+
 </html>
