--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>CSS Grid Code Along</title>
 </head>
 <body>
-  <div class="grid-container">
+  <div class="grid-container bigItem">
     <div class="grid-item">1</div>
     <div class="grid-item">2</div>
     <div class="grid-item">3</div>
