--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     <div class="grid-item">11</div>
     <div class="grid-item">12</div>
   </div>
+  <div class="bigItem">12</div>
 </body>
 </html>
