--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="index.css">
   <title>CSS Grid Code Along</title>
 </head>
+
 <body>
   <div class="grid-container">
     <div class="grid-item">1</div>
@@ -19,8 +20,9 @@
     <div class="grid-item">8</div>
     <div class="grid-item">9</div>
     <div class="grid-item">10</div>
-    <div class="grid-item">11</div>
+    <div class="bigItem">11</div>
     <div class="grid-item">12</div>
   </div>
 </body>
+
 </html>
