--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="grid-item">10</div>
     <div class="grid-item">11</div>
     <div class="grid-item">12</div>
+    <div class="bigItem"></div>
   </div>
 </body>
 </html>
