--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- file:///home/redburd/Desktop/dev/css-grid-lab-v-000/index.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,7 +20,7 @@
     <div class="grid-item">7</div>
     <div class="grid-item">8</div>
     <div class="grid-item">9</div>
-    <div class="grid-item">10</div>
+    <div class="grid-item bigItem">10</div>
     <div class="grid-item">11</div>
     <div class="grid-item">12</div>
   </div>
