--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="grid-container">
-    <div class="grid-item">1</div>
+    <div class="grid-item bigItem">1</div>
     <div class="grid-item">2</div>
     <div class="grid-item">3</div>
     <div class="grid-item">4</div>
@@ -21,6 +21,7 @@
     <div class="grid-item">10</div>
     <div class="grid-item">11</div>
     <div class="grid-item">12</div>
+    <div class="grid-item">13</div>
   </div>
 </body>
 </html>
