--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="grid-container">
     <div class="grid-item">1</div>
-    <div class="grid-item">2</div>
+    <div class="grid-item bigItem">2</div>
     <div class="grid-item">3</div>
     <div class="grid-item">4</div>
     <div class="grid-item">5</div>
@@ -21,6 +21,8 @@
     <div class="grid-item">10</div>
     <div class="grid-item">11</div>
     <div class="grid-item">12</div>
+    <div class="grid-item">13</div>
+    <div class="grid-item">14</div>
   </div>
 </body>
 </html>
